--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html lang="ru">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Кузница Персонажей — русскоязычный конструктор персонажей для DnD. Пошаговое создание: раса, класс, характеристики, навыки и снаряжение."
-    />
+    <meta name="description"
+          content="Кузница Персонажей — русскоязычный конструктор персонажей для DnD. Пошаговое создание: раса, класс, характеристики, навыки и снаряжение." />
     <title>Кузница Персонажей — DnD на русском</title>
-  </head>
+    <!-- ✅ Подключаем Monomakh -->
+    <link href="https://fonts.googleapis.com/css2?family=Monomakh&display=swap"
+          rel="stylesheet" />
+</head>
 
   <body>
     <div id="root"></div>
